fix(tv-next): set aspect-ratio to card on mobile device

--- a/packages/mirror-tv-next/styles/components/topic/single-topic/ui-post-card.module.scss
+++ b/packages/mirror-tv-next/styles/components/topic/single-topic/ui-post-card.module.scss
@@ -15,7 +15,9 @@
 
   .imageWrapper {
     position: relative;
+    aspect-ratio: 5 / 3;
     @include media-breakpoint-up(md) {
+      aspect-ratio: auto;
       height: 132px;
     }
     @include media-breakpoint-up(xl) {
